--- a/Nosotros.html
+++ b/Nosotros.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -14,7 +14,7 @@
 		rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/animate.css">
-	<title>Quiénes somos Topciment microcemento. Conoce nuestra historia.</title>
+	<title>Topciment, fabricantes de microcemento. Conoce nuestra historia.</title>
 	<!-- Nuevo estilo y js de página -->
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -29,9 +29,9 @@
 	<!-- End plugin zoom image -->
 	<!-- End new styles -->
 	<meta name="description"
-		content="Topciment España es la empresa fabricante de microcemento con más años de experiencia en el mercado. Llevamos desde 2005 creando productos de alta calidad." />
-	<link rel="canonical" href="https://www.topciment.com/Nosotros.html" />
-	<link rel="alternate" href="https://www.topciment.com/Nosotros.html" hreflang="es-ES" />
+		content="Fabricantes de microcemento en España con más años de experiencia en el mercado. En Topciment llevamos desde 2005 creando productos de alta calidad." />
+	<link rel="canonical" href="https://www.topciment.com/nosotros.html" />
+	<link rel="alternate" href="https://www.topciment.com/nosotros.html" hreflang="es-ES" />
 	<link rel="alternate" href="https://www.topciment.com/en/about-us.html" hreflang="en-GB" />
 	<link rel="alternate" href="https://www.topciment.com/fr/entreprise.html" hreflang="fr-FR" />
 	<link rel="alternate" href="https://www.topciment.com/de/uber-uns.html" hreflang="de-DE" />
@@ -234,9 +234,9 @@
 			<div id="sidebar" class="menuOculto menuMicrocementos stick" style="display: block; top: 200px;">
 				<ul>
 					<li>
-						<h1> <a href="#up" style="font-size:26px">Nosotros</a></h1>
+						<a href="#up" style="font-size:26px">Nosotros</a>
 					</li>
-					<li><a href="#conocenos">Nosotros</a></li>
+					<li><a href="#conocenos">Conócenos</a></li>
 					<li><a href="contacto.html" target="_blank">Contacto</a></li>
 				</ul>
 			</div>
@@ -330,8 +330,8 @@
 
 					<div class="contenedorMenuOculto">
 						<div class="contenedorMagenDerecha text-justify">
-							<h2 class="en2" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
-								Conócenos</h2>
+							<h1 class="en2" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
+								Fabricantes de microcemento</h1>
 							<div class="row">
 								<div class="col-md-12">
 									<p>
@@ -350,13 +350,13 @@
 										se fundó y desde entonces no hemos parado de crecer.<br>
 									</p>
 									<p>
-										El principal motivo de Topciment era y es, crear un microcemento de
+										El principal motivo de Topciment era y es, fabricar un microcemento de
 										calidad, con óptimas prestaciones y muy competitivo dentro del mercado
 										de los revestimientos. Pero no sólo eso, también estamos muy centrados
 										en la producción de materiales directamente relacionados con el
 										microcemento, desde
-										imprimaciones, hasta selladores, pasando por acabados decorativos de
-										alta decoración o limpiadores especializados.
+										<a class="links" href="sistemas/primacem-imprimacione-y-promotores-de-adherencia.html">imprimaciones</a>, <a class="links" href="sistemas/topsealer-barniz.html">barnices</a>, <a class="links" href="sistemas/classic-mettal-pintura-metalica-natural-y-oxido.html">pinturas metálicas</a>pasando por <a class="links" href="sistemas/efectto-microcemento-listo-al-uso.html">revestimientos decorativos de
+										alta decoración</a> o limpiadores especializados.
 										<br>
 									</p>
 									<p>Esta inquietud por estar a cargo de todo lo que conlleva la aplicación
@@ -378,7 +378,7 @@
 									</div>
 
 									<p>
-										En Topciment fabricamos todos los productos que comercializamos. De esta
+										En Topciment fabricamos microcemento y todos los productos que comercializamos. De esta
 										manera
 										nos aseguramos el control de su calidad en los procesos de elaboración.
 										Queremos
@@ -671,7 +671,7 @@
 				<div class="col-md-3 col4F">
 					<h6 class="tituloF"><strong>EMPRESA</strong></h6>
 					<ul class="ulF empresaF">
-						<li class="nosotrosF"><a class="linkB" href="Nosotros.html">Nosotros</a></li>
+						<li class="nosotrosF"><a class="linkB" href="nosotros.html">Nosotros</a></li>
 						<li class="noticiasF"><a class="linkB" href="noticias.html">Noticias</a></li>
 						<li class="contactoF"><a class="linkB" href="contacto.html">Contacto</a></li>
 						<li class="newsletterF"><a class="linkB" href="http://zc.vg/jPV0m">Suscríbete a nuestra
