--- a/distribuidores.html
+++ b/distribuidores.html
@@ -343,7 +343,7 @@
           </h2>
           <h3 data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>Cursos de formación en las
             instalaciones del distribuidor en península.</h3>
-          <p>En Topciment ofrecemos asesoramiento continuo a nuestros distribuidores. Realizamos cursos de formación
+          <p>En Topciment ofrecemos asesoramiento continuo a nuestros distribuidores. Realizamos <a class="links" href="profesionales.html#profesionales-microcemento">cursos de microcecemento</a>
             en los puntos de distribución para que los profesionales conozcan al detalle y en primera persona los
             procedimientos de aplicación del microcemento Topciment.</p>
           <p>Nuestros <strong>cursos homologados</strong>, con <strong>certificación experto</strong>, son impartidos
@@ -367,8 +367,9 @@
             microcemento (DSV o WT), una máquina preparará de manera automática el pigmento a aplicar sobre el
             producto minimizando el margen de error.</p>
           <h3 data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'> Experiencia en el sector</h3>
-          <p>Topciment es una empresa especializada en la fabricación y distribución, de microcemento con más de 10
-            años de experiencia. Ubicados en Valencia, nuestra red se extiende por todo el territorio nacional, así
+          <p>Topciment es una empresa especializada en la <a target="_blank"
+                      href="https://www.topciment.com/nosotros.html">fabricación de microcemento </a> con más de 15
+            años de experiencia. Ubicados en Valencia, nuestra red de distribuidores se extiende por todo el territorio nacional, así
             como en diferentes países como Alemania, Holanda, Portugal, Grecia, Reino Unido, etc.<br>
           </p>
           <p>La experiencia adquirida es una de nuestras mejores referencias. Disponemos de un equipo altamente
@@ -383,8 +384,7 @@
             zonas de confluencia con éstos, para que tú como distribuidor tengas preferencia.<br>
           </p>
           <p>Queremos establecer contigo alianzas duraderas en el tiempo para obtener el mejor beneficio mutuo.
-            Nosotros, como fabricantes, invertimos en nuestros procesos de producción. Mientras que tu misión será la
-            de facilitar en tiempo y espacio nuestros productos a los aplicadores.</p>
+            Nosotros, como <a class="links" href="nosotros.html">fábrica de microcemento</a>, invertimos en nuestros procesos de producción, investigación y nuevos productos. Mientras que tu misión será la de facilitar en tiempo y espacio nuestros productos a los aplicadores.</p>
         </div>
       </div>
     </div>
@@ -471,7 +471,7 @@
         <div class="col-md-3 col4F">
           <h6 class="tituloF"><strong>EMPRESA</strong></h6>
           <ul class="ulF empresaF">
-            <li class="nosotrosF"><a class="linkB" href="Nosotros.html">Nosotros</a></li>
+            <li class="nosotrosF"><a class="linkB" href="nosotros.html">Nosotros</a></li>
             <li class="noticiasF"><a class="linkB" href="noticias.html">Noticias</a></li>
             <li class="contactoF"><a class="linkB" href="contacto.html">Contacto</a></li>
             <li class="newsletterF"><a class="linkB" href="http://zc.vg/jPV0m">Suscríbete a nuestra newsletter</a></li>
