--- a/profesionales.html
+++ b/profesionales.html
@@ -32,9 +32,9 @@
      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
    <!-- End new styles -->
-   <title>¿Necesitas asesoramiento profesional? Resolvemos dudas a los profesionales del microcemento</title>
+   <title>Cursos microcemento | Aplicación de microcemento Topciment </title>
    <meta name="description"
-     content="En Topciment contamos con un gran equipo de profesionales del microcemento que te asesorarán para trabajar de manera correcta todos nuestros productos." />
+     content="Apúntate a nuestros cursos de aplicación de microcemento para profesionales. Invierte en tu futuro y aprende las técnicas más avanzadas." />
 
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -277,11 +277,8 @@
              <div class="contenedorMenuOculto">
                <div class="contenedorMagenDerecha">
 
-                 <div id="mitadTextoIzquierda" data-animate-scroll='{"x": "-100",
-                    "y": "0",
-                    "alpha": "0",
-                    "duration": "1"}'>
-                   <p><strong>¿Quieres ser un experto en aplicación de microcemento?</strong><br>
+                 <div id="mitadTextoIzquierda">
+                   <h2>¿Quieres ser un experto en aplicación de microcemento?</h2>
                    </p>
                    <p>Dado el alto crecimiento del sector y su demanda, apostar por el microcemento garantiza muchas
                      oportunidades de trabajo y de negocio.<br>
@@ -317,15 +314,12 @@
 
 
                  </div>
-                 <div id="mitadTextoDerecha" data-animate-scroll='{"x": "0",
-                    "y": "50",
-                    "alpha": "0",
-                    "duration": "2"}'>
-                   <p><strong>¿Qué duración tiene el curso?</strong><br>
+                 <div id="mitadTextoDerecha">
+                   <h3>¿Qué duración tiene el curso de microcemento?</h3>
                    </p>
                    <p>El curso se presenta en una única jornada intensiva de 6 horas.<br>
                    </p>
-                   <p><strong>¿Qué coste tiene el curso?</strong><br>
+                   <h3>¿Qué coste tiene el curso de microcemento?</h3>
                    </p>
                    <p><strong>El coste del curso es de 200€, </strong>los cuales se descontarán del importe de la
                      primera
@@ -457,7 +451,7 @@
          <div class="col-md-3 col4F">
            <h6 class="tituloF"><strong>EMPRESA</strong></h6>
            <ul class="ulF empresaF">
-             <li class="nosotrosF"><a class="linkB" href="Nosotros.html">Nosotros</a></li>
+             <li class="nosotrosF"><a class="linkB" href="nosotros.html">Nosotros</a></li>
              <li class="noticiasF"><a class="linkB" href="noticias.html">Noticias</a></li>
              <li class="contactoF"><a class="linkB" href="contacto.html">Contacto</a></li>
              <li class="newsletterF"><a class="linkB" href="http://zc.vg/jPV0m">Suscríbete a nuestra newsletter</a></li>
