--- a/sistemas.html
+++ b/sistemas.html
@@ -41,9 +41,9 @@
   <link rel="alternate" href="https://www.topciment.ru/sistemy.html" hreflang="ru-RU" />
   <link rel="alternate" href="https://www.topciment.cn/microcement-systems.html" hreflang="zh-CN" />
   <!-- End new styles -->
-  <title>Revestimientos decorativos Topciment: sistemas completos de microcemento para todas las superficies</title>
+  <title>Gama de microcementos, barnices y pinturas | Productos Topciment</title>
   <meta name="description"
-    content="¿Buscas productos de microcemento para revestimientos decorativos? En Topciment encontrarás sistemas de microcemento para todas las aplicaciones: microcemento bicomponente, microcemento monocomponente, microcemento listo al uso y mucho más. " />
+    content="Conoce nuestra gama de microcementos, barnices, pinturas, pigmentos, veladuras, imprimaciones, productos de limpieza y herramientas." />
 
   <style type="text/css">
     div.ocultable {
@@ -873,7 +873,7 @@
           <div class="col-md-3 col4F">
             <h6 class="tituloF"><strong>EMPRESA</strong></h6>
             <ul class="ulF empresaF">
-              <li class="nosotrosF"><a class="linkB" href="Nosotros.html">Nosotros</a></li>
+              <li class="nosotrosF"><a class="linkB" href="nosotros.html">Nosotros</a></li>
               <li class="noticiasF"><a class="linkB" href="noticias.html">Noticias</a></li>
               <li class="contactoF"><a class="linkB" href="contacto.html">Contacto</a></li>
               <li class="newsletterF"><a class="linkB" href="http://zc.vg/jPV0m">Suscríbete a nuestra newsletter</a>
