--- a/sistemas/atlanttic-microcemento-para-piscinas.html
+++ b/sistemas/atlanttic-microcemento-para-piscinas.html
@@ -32,9 +32,9 @@
     <script type='text/javascript' src='../js/mycode.js'></script>
     <!-- End new styles -->
 
-    <title>Microcemento para piscinas. </title>
+    <title>Microcemento para piscinas | Atlanttic</title>
     <meta name="description"
-        content="Atlanttic es la línea de microcemento desarrollada específicamente para espacios en contacto permanente con agua. " />
+        content="El microcemento para piscinas Atlanttic, es el microcemento para espacios en contacto permanente con el agua." />
 
     <link rel="canonical" href="https://www.topciment.com/sistemas/atlanttic-microcemento-para-piscinas.html" />
     <link rel="alternate" href="https://www.topciment.com/en/systems/" hreflang="en-GB" />
@@ -299,13 +299,12 @@
                     <div class="contenedorMenuOculto">
                         <div class="contenedorMagenDerecha"
                             data-animate-scroll='{"x": "-100", "y": "0", "alpha": "0", "duration": "1"}'>
-                            <p class="en2">¿Qué es
-                                Atlanttic?</p>
+                            <h1 class="en2">Microcemento piscinas Atlanttic</h1>
                             <div class="text-justify">
 
                                 <p>
-                                    <h1 class="h2s">Atlanttic</h1>
-                                    <h3 class="h3s">es la línea de
+                                
+                                    <h3 class="h3s"> Atlanttic es la línea de
                                         microcemento bicomponente
                                         (cemento + resina) desarrollada,
                                         específicamente, para superficies
