--- a/sistemas/classic-mettal-pintura-metalica-natural-y-oxido.html
+++ b/sistemas/classic-mettal-pintura-metalica-natural-y-oxido.html
@@ -29,9 +29,8 @@
 	<link rel="stylesheet" type="text/css" href="../css/restyle.css">
 	<script type='text/javascript' src='../js/mycode.js'></script>
 	<!-- End new styles -->
-	<title> Pinturas metálicas con acabados oxidados </title>
-	<meta name="description" content="Es la gama de recubrimientos con pigmentos metálicos listos al uso caracterizada por su
-	capacidad para crear efectos oxidados auténticos y de alta calidad.">
+	<title>Pintura efecto óxido para estilo vintage | Pintura Classic Mettal</title>
+	<meta name="description" content="La pintura efecto óxido Classic Mettal de Topciment es ideal para crear un estilo vintage. Obtendrás múltiples acabados oxidados.">
 	<link rel="canonical"
 		href="https://www.topciment.com/sistemas/classic-mettal-pintura-metalica-natural-y-oxido.html" />
 	<link rel="alternate" href="https://www.topciment.com/en/systems/classic-mettal-metallic-paints.html"
@@ -296,12 +295,12 @@
 					<div class="contenedorMenuOculto">
 						<div class="contenedorMagenDerecha"
 							data-animate-scroll='{"x": "-100", "y": "0", "alpha": "0", "duration": "1"}'>
-							<p class="en2">
-								¿Qué es Classic Mettal?</p>
+							<h1 class="en2">
+							Pinturas metálicas efecto óxido Classic Mettal</h1>
 							<div class="text-justify">
 								<p>
-									<h1 class="h2s">Classic Mettal</h1>
-									<h3 class="h3s">es la gama de recubrimientos metálicos listos al uso con posibilidad
+							
+									<h3 class="h3s">Classic Mettal es la gama de recubrimientos metálicos listos al uso con posibilidad
 										de acabado oxidable.</h3>
 								</p>
 								<p>
