--- a/sistemas/efectto-microcemento-listo-al-uso.html
+++ b/sistemas/efectto-microcemento-listo-al-uso.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="theme-color" content="#000" />
+	<meta name="theme-color" content="#000" /> 
 	<meta name="viewport" content="width=device-width" />
 	<!--[if lt IE 9]> <script src="js/css3-mediaqueries.js"></script> <![endif]-->
 	<link rel="stylesheet" type="text/css" href="../css/estilo.css">
@@ -29,10 +29,8 @@
 	<!-- End new styles -->
 	<link rel="stylesheet" href="../css/animate.css">
 
-	<title>Efectto, el revestimiento de alta decoración listo al uso.</title>
-	<meta name="description" content="Es el microcemento listo al uso. Es un material acrílico que ofrece acabados decorativos
-		naturales de alta calidad e inimitables. Permite reducir el efecto de aguas manteniendo la textura propia
-		del microcemento. " />
+	<title>Microcemento listo al uso de alta decoración | Efectto Quartz</title>
+	<meta name="description" content="El microcemento listo al uso Efectto Quartz de Topciment crea acabados continuos inigualables de alta decoración." />
 	<link rel="canonical" href="https://www.topciment.com/sistemas/efectto-microcemento-listo-al-uso.html" />
 
 	<link rel="alternate" href="https://www.topciment.com/en/systems/efectto-ready-to-use-microcement.html"
@@ -287,12 +285,10 @@
 					<div class="contenedorMenuOculto">
 						<div class="contenedorMagenDerecha"
 							data-animate-scroll='{"x": "-100", "y": "0", "alpha": "0", "duration": "1"}'>
-							<p class="en2">¿Qué es
-								Efectto Quartz?</p>
+							<h1 class="en2">Microcemento listo al uso Efectto Quartz</h1>
 							<div class="text-justify">
 								<p>
-									<h1 class="h2s">Efectto Quartz</h1>
-									<h3 class="h3s">es la línea de microcemento listo al uso, que permite
+									<h3 class="h3s"> Efectto Quartz es la línea de microcemento listo al uso, que permite
 										conseguir acabados continuos de alta decoración. Su exclusiva fórmula no
 										contiene
 										cementos que puedan producir retracciones imprevistas ni fisuras.</h3>
