--- a/sistemas/elitte-efecto-metalico-y-veladuras.html
+++ b/sistemas/elitte-efecto-metalico-y-veladuras.html
@@ -40,9 +40,9 @@
     <link rel="alternate" href="https://www.topciment.com/nl/" hreflang="nl-NL" />
     <link rel="alternate" href="https://www.topciment.com/gr/" hreflang="el-GR" />
     <link rel="alternate" href="https://www.topciment.ru/" hreflang="ru-RU" />
-    <title>Elitte, efecto metálico y veladuras </title>
+    <title>Veladuras metálicas | Veladuras y pátinas Elitte</title>
     <meta name="description"
-        content="¿Buscas acabados brillantes o quizá los prefieres metálicos? Con nuestra gama de veladuras Elitte todo lo que quieras puedes tenerlo. ¡Descubre más!">
+        content="Las veladuras metálicas Elitte de Topciment ofrecen acabados metálicos y brillantes. Pátinas y purpurinas  con un alto grado de decoración.">
 
     <script type="text/javascript">
         function mostrar() {
@@ -280,12 +280,12 @@
                     <div class="contenedorMenuOculto">
                         <div class="contenedorMagenDerecha"
                             data-animate-scroll='{"x": "-100", "y": "0", "alpha": "0", "duration": "1"}'>
-                            <p class="en2">
-                                ¿Qué es Elitte?</p>
+                            <h1 class="en2">
+                               Veladuras metálicas Elitte</h1>
                             <div class="text-justify">
                                 <p>
-                                    <h1 class="h2s">Elitte</h1>
-                                    <h3 class="h3s">es la gama de veladuras con reflejos metalizados.</h3>
+                              
+                                    <h3 class="h3s">Elitte es la gama de veladuras con reflejos metalizados.</h3>
                                 </p>
                                 <p>Es un producto muy polivalente que ofrece gran variedad de acabados y que consigue un
                                     juego cambiante y agradable de luz y colores reflejados. </p>
