--- a/sistemas/pure-mettal-microcemento-metalico.html
+++ b/sistemas/pure-mettal-microcemento-metalico.html
@@ -40,9 +40,9 @@
 	<link rel="alternate" href="https://www.topciment.com/nl/" hreflang="nl-NL" />
 	<link rel="alternate" href="https://www.topciment.com/gr/" hreflang="el-GR" />
 	<link rel="alternate" href="https://www.topciment.ru/" hreflang="ru-RU" />
-	<title>Pure Mettal, revestimiento metálico </title>
+	<title>Revestimiento metálico Pure Mettal | Acabados metálicos</title>
 	<meta name="description"
-		content="¿Quieres dar un efecto metálico a superficies y estancias? Te presentamos Pure Mettal, el revestimiento para acabados metálicos y óxidos.  ">
+		content="El revestimiento metálico Pure Metal de Topciment crea acabados metálicos auténticos en aluminio, iridio, bronce, cobre y latón">
 	<script type="text/javascript">
 		function mostrar() {
 			document.getElementById('oculto').style.display = 'block';
@@ -278,12 +278,12 @@
 					<div class="contenedorMenuOculto">
 						<div class="contenedorMagenDerecha"
 							data-animate-scroll='{"x": "-100", "y": "0", "alpha": "0", "duration": "1"}'>
-							<h2 class="en2">
-								¿Qué es Pure Mettal?</h2>
+							<h1 class="en2">
+								Revestimiento metálico Pure Mettal</h1>
 							<div class="text-justify">
 								<p>
-									<h1 class="h2s">Pure Mettal</h1>
-									<h3 class="h3s">es el revestimiento metálico bicomponente desarrollado,
+							
+									<h3 class="h3s">Pure Mettal es el revestimiento metálico bicomponente desarrollado,
 										específicamente, para conseguir acabados de aspecto metalizado.</h3>
 								</p>
 								<p>La tecnología de Pure Mettal, caracterizada por su alta concentración de metal,
