--- a/sistemas/sttandard-microcemento-bicomponente.html
+++ b/sistemas/sttandard-microcemento-bicomponente.html
@@ -35,10 +35,9 @@
 	<!-- <script   type="text/javascript" src="https://www.topciment.com/js/lazy.js" ></script> -->
 	<!-- End new styles -->
 
-	<title>Microcemento bicomponente para revestimientos decorativos</title>
+	<title>Microcemento bicomponente tradicional | Sttandard</title>
 	<meta name="description"
-		content="Si buscas un microcemento versátil que te permita crear texturas en cualquier superficie,
-		 ¡Sttandard es lo que necesitas! Es nuestro microcemento bicomponente por excelencia que permite realizar revestimientos decorativos de calidad. " />
+		content="El microcemento Sttandard es el microcemento bicomponente tradicional de Topciment" />
 
 	<link rel="canonical" href="https://www.topciment.com/sistemas/sttandard-microcemento-bicomponente.html" />
 
@@ -297,12 +296,10 @@
 					<div class="contenedorMenuOculto">
 						<div class="contenedorMagenDerecha"
 							data-animate-scroll='{"x": "-100", "y": "0", "alpha": "0", "duration": "1"}'>
-							<p class="en2">¿Qué es Sttandard?</p>
+							<h1 class="en2">Microcemento bicomponente Sttandard</h1>
 							<div class="text-justify">
-								<p>
-									<h1 class="h2s">Sttandard</h1>
-									<h3 class="h3s">es la línea de microcemento bicomponente (cemento y resina).</h3>
-								</p>
+								
+								<span> Sttandard es la línea de  microcemento bicomponente  </span>  (cemento y resina).<p></p>
 								<p>Microcemento Sttandard es ideal para el artesano aplicador que tiene como objetivo
 									crear texturas con carácter propio. Sttandard le permite jugar con sus propias
 									mezclas y sacar, así, el máximo partido a los productos. </p>
