--- a/microcementos.html
+++ b/microcementos.html
@@ -388,7 +388,8 @@
                     "alpha": "0",
                     "duration": "2"}'>
               <p>
-                <h3>En <strong>Topciment</strong>, más que fabricantes de microcemento, somos
+                <h3>En <strong>Topciment</strong>, más que <a target="_blank"
+                      href="https://www.topciment.com/nosotros.html">fabricantes de microcemento.</a>, somos
                   <strong>especialistas</strong>, y por eso marcamos la diferencia.</h3>
               </p>
               <p>
@@ -747,7 +748,7 @@
               original. Siempre y cuando los azulejos estén firmes y no estén sueltos. En estos casos es necesario el
               uso de la malla para solidarizar el soporte.<br>
 
-              <a target="_blank" href="https://youtu.be/e_frK5ObsD0">Ver el método de aplicación de microcemento sobre
+              <a target="_blank" class="links" href="https://youtu.be/e_frK5ObsD0">Ver el método de aplicación de microcemento sobre
                 azulejos con video tutorial.</a>
 
             </p>
@@ -772,7 +773,7 @@
             <p><strong>Microcemento piscinas</strong><br>
               <strong>Topciment ha desarrollado Aquaciment, un sistema propio y exclusivo de revestimiento para
                 piscinas.</strong> Aquí puedes ver
-              <strong><a href="sistemas.html#microcemento-para-piscinas" target="_blank">algunos ejemplos</a></strong>.
+              <strong><a class="links" href="sistemas.html#microcemento-para-piscinas" target="_blank">algunos ejemplos</a></strong>.
             </p>
             <p><strong>Microcemento sobre madera natural o en parquet</strong><br>
               Los suelos de parquet o madera natural poseen gran cantidad de juntas, las tablas dilatan en diferentes
@@ -1250,7 +1251,10 @@
               máximo
               posible para que no se formen manchas blancas por estar la primera capa de sellado aún húmeda.</p>
           </div>
-
+          <div style="border-top:thin solid #000; padding:10px 0; font-size:22px; text-align:left;">
+            <h3>¿Cómo puedo apuntarme a un curso de microcemento?</h3>
+            <p style="font-size:16px;"> Si eres profesional y quieres <b>aprender a aplicar microcemento</b> puedes apuntarte a nuestros cursos de aplicación de microcemento directamente en <a class="links" href="https://training.topciment.com/">la página de reservas de cursos</a> donde puedes ver el calendario de formación que actualizamos constantemente. Si antes de hacer la reserva quieres más información puedes contactar con nosotros por teléfono o desde nuestro <a class="links" href="contacto.html">formulario</a>. Todas las características , a quienes van dirigidos y lo que puedes aprender lo explicamos en el apartado <a class="links" href="profesionales.html#profesionales-microcemento">Cursos de aplicación de microcemento</a>.</p>
+          </div>
           <div style="border-top:thin solid #000; padding:10px 0; font-size:22px; text-align:left;">&nbsp;</div>
         </div>
       </div>
@@ -1322,7 +1326,7 @@
           <div class="col-md-3 col4F">
             <h6 class="tituloF"><strong>EMPRESA</strong></h6>
             <ul class="ulF empresaF">
-              <li class="nosotrosF"><a class="linkB" href="Nosotros.html">Nosotros</a></li>
+              <li class="nosotrosF"><a class="linkB" href="nosotros.html">Nosotros</a></li>
               <li class="noticiasF"><a class="linkB" href="noticias.html">Noticias</a></li>
               <li class="contactoF"><a class="linkB" href="contacto.html">Contacto</a></li>
               <li class="newsletterF"><a class="linkB" href="http://zc.vg/jPV0m">Suscríbete a nuestra newsletter</a>
