--- a/curso-formacion-microcementoB.html
+++ b/curso-formacion-microcementoB.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" type="text/css" href="css/estilo.css">
       <link rel="icon" type="image/png" href="https://www.topciment.com/favicon.png" />
       <meta name="Language" content="ES" />
-
+ 
       <link
           href='https://fonts.googleapis.com/css?family=Raleway:400,100,100italic,200,200italic,300,300italic,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic&subset=latin,latin-ext'
           rel='stylesheet' type='text/css'>
@@ -654,7 +654,7 @@
                                                   <div class="card-body">
                                                       <h3 class="card-title">
                                                           Videotutoriales</h3>
-                                                          <h4 class="en3 card-text">Contamos con
+                                                          <h4 class="en3s card-text">Contamos con
                                                               videotutoriales para
                                                               aquellas personas que
                                                               estén interesadas en
@@ -869,7 +869,7 @@
                                                           }
 
                                                           .team-boxed {
-                                                              /* color:#313437;
+                                                            /* color:#313437;
                                                             background-color:#eef4f7; */
                                                           }
 
@@ -965,7 +965,8 @@
                                                           style="display: block;height: 50px;margin-top: -50px;visibility: hidden;"></a>
 
                                                       <h2 class="en5 mt-5">Precio
-                                                      </h2>
+                                                  
+                                                    </h2>
                                                       <h3 class="en3s"> El precio de los cursos de formación Topciment depende de
                                                           varios factores como el <strong>nivel de
                                                               especialización</strong> .</h3>
