--- a/Nosotros.html
+++ b/Nosotros.html
@@ -14,7 +14,7 @@
 		rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/animate.css">
-	<title>Topciment, fabricantes de microcemento. Conoce nuestra historia.</title>
+	<title>Fabricantes microcemento, hormigón impreso y resina epoxi |Topciment</title>
 	<!-- Nuevo estilo y js de página -->
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -29,7 +29,7 @@
 	<!-- End plugin zoom image -->
 	<!-- End new styles -->
 	<meta name="description"
-		content="Fabricantes de microcemento en España con más años de experiencia en el mercado. En Topciment llevamos desde 2005 creando productos de alta calidad." />
+		content="Somos fabricantes de microcemento, hormigón impreso y resina epoxi. Desde 2005 no hemos parado de innovar. Conoce la fábrica Topciment. " />
 	<link rel="canonical" href="https://www.topciment.com/nosotros.html" />
 	<link rel="alternate" href="https://www.topciment.com/nosotros.html" hreflang="es-ES" />
 	<link rel="alternate" href="https://www.topciment.com/en/about-us.html" hreflang="en-GB" />
