--- a/distribuidores.html
+++ b/distribuidores.html
@@ -28,9 +28,9 @@
 
   <!-- End new styles -->
 
-  <title>Distribuidores de productos Topciment en todo el mundo</title>
+  <title>Distribuidores microcemento, pinturas y revestimientos decorativos</title>
   <meta name="description"
-    content="¿Quieres ser distribuidor Topciment? Somos una empresa que crece con profesionales de todo el mundo. Realizamos cursos de formación para garantizar la correcta aplicación del microcemento. Llámanos. " />
+    content="Encuentra distribuidores de microcemento, pinturas y revestimientos decorativos .Topciment cuenta con distribuidores en más de 58 países." />
   <link rel="canonical" href="https://www.topciment.com/distribuidores.html" />
   <link rel="alternate" href="https://www.topciment.com/distribuidores.html" hreflang="es-ES" />
   <link rel="alternate" href="https://www.topciment.com/en/dealers.html" hreflang="en-GB" />
@@ -128,9 +128,6 @@
   id="body">
   <!-- Go to www.addthis.com/dashboard to customize your tools -->
   <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58c7cbcfe7778885"></script>
-
-
-
   <div id="header">
     <div class="menuBar" style="position:fixed; transform: translate3d(0px, 0px, 1px);">
       <div class="menuBarContent">
@@ -343,7 +340,7 @@
           </h2>
           <h3 data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>Cursos de formación en las
             instalaciones del distribuidor en península.</h3>
-          <p>En Topciment ofrecemos asesoramiento continuo a nuestros distribuidores. Realizamos <a class="links" href="profesionales.html#profesionales-microcemento">cursos de microcecemento</a>
+          <p>En Topciment ofrecemos asesoramiento continuo a nuestros distribuidores. Realizamos <a class="links" href="profesionales/cursos-aplicacion-microcemento.html">cursos de microcecemento</a>
             en los puntos de distribución para que los profesionales conozcan al detalle y en primera persona los
             procedimientos de aplicación del microcemento Topciment.</p>
           <p>Nuestros <strong>cursos homologados</strong>, con <strong>certificación experto</strong>, son impartidos
