--- a/efectto.html
+++ b/efectto.html
@@ -1012,7 +1012,7 @@
 					<div class="col-md-3 col4F">
 						<h6 class="tituloF"><strong>EMPRESA</strong></h6>
 						<ul class="ulF empresaF">
-							<li class="nosotrosF"><a class="linkB" href="../Nosotros.html">Nosotros</a></li>
+							<li class="nosotrosF"><a class="linkB" href="../nosotros.html">Nosotros</a></li>
 							<li class="noticiasF"><a class="linkB" href="../noticias.html">Noticias</a></li>
 							<li class="contactoF"><a class="linkB" href="../contacto.html">Contacto</a></li>
 							<li class="newsletterF"><a class="linkB" href="http://zc.vg/jPV0m">Suscríbete a nuestra newsletter</a></li>
