--- a/noticias.html
+++ b/noticias.html
@@ -30,9 +30,9 @@
 
     <!-- End new styles -->
 
-    <title>Noticias Topciment: Ferias, Eventos y novedades en productos </title>
+    <title>Noticias microcemento: nuevos productos, tendencias y consejos</title>
     <meta name="description"
-        content="Novedades sobre los productos Topciment. Últimas noticias sobre microcemento y tendencias en revestimientos." />
+        content="Noticias de microcemento sobre nuevos productos de Topciment, últimas tendencias en revestimientos continuos y consejos." />
 
     <link rel="canonical" href="https://www.topciment.com/noticias.html" />
 
