--- a/sistemas/topsealer-barniz.html
+++ b/sistemas/topsealer-barniz.html
@@ -789,7 +789,7 @@
 						</div>
 						<!-- descripcion -->
 						<div class="col-md-6">
-							<p> El Sellador <h2 class="h2s">Topsealer DSV</h2>
+							<p> <h2 class="h2s">Topsealer DSV</h2>
 								<h3 class="h3s">de Topciment® es un poliuretano
 									acrílico de dos componentes (A+B) al disolvente.</h3>
 							</p>
