--- a/video-tutoriales-microcemento.html
+++ b/video-tutoriales-microcemento.html
@@ -245,7 +245,7 @@
                     <li><a href="#colores">Colores</a></li>
 
                     <!--<li><a href="#ventajas">Ventajas del microcemento</a></li>
-           <li><a href="#preguntas-frecuentes-ok">Preguntas frecuentes</a></li> -->
+           <li><a href="#preguntas-frecuentes-ok">Preguntas frecuentes</a></li>    menu side bar-->
                 </ul>
             </div>
         </div>
