--- a/profesionalesv2.html
+++ b/profesionalesv2.html
@@ -25,12 +25,15 @@
    <link rel="stylesheet" type="text/css" href="css/restyle.css">
    <script type='text/javascript' src='js/mycode.js'></script>
 
-   <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css"
+
+
+   <!-- Font awesome -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
      crossorigin="anonymous" />
    <link rel="stylesheet" type="text/css"
      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
    <!-- ********** END NEW LINKS ********** -->
    <title>Servicios para profesionales del microcemento | Topciment</title>
    <meta name="description"
@@ -127,7 +130,7 @@
        src="https://www.facebook.com/tr?id=358666781190455&ev=PageView&noscript=1" /></noscript>
 
 
- </head> 
+ </head>
 
  <body style="-moz-transform:none; -webkit-transform:none; -o-transform:none; -ms-transform:none; transform:none; "
    id="body">
@@ -160,10 +163,11 @@
            <ul>
              <!--<li><a id="producmenu" href="productos.html">Productos</a></li>-->
              <li><a href="microcementos.html">Microcemento</a></li>
-             <li><a href="sistemas.html">Sistemas</a></li>
+             <li><a href="productos.html">Productos</a></li>
              <li><a href="galeria.html">Galeria</a></li>
              <li><a class="activo" href="profesionales.html">Profesionales</a></li>
              <li><a href="noticias.html">Noticias</a></li>
+             <li><a href="nosotros.html">Nosotros</a></li>
              <li><a href="contacto.html">Contacto</a></li>
            </ul>
            <div class="dropdown" style="top: -20px;">
@@ -196,16 +200,21 @@
          <ul>
            <li><a href="#up" style="font-size:26px">Profesionales</a></li>
            <!--<li><a href="#profesionales-microcemento">Profesionales de Microcemento</a></li> -->
-           <li><a href="#que-ofrecemos">¿Qué ofrecemos?</a></li>
-           <li><a href="contacto.html">Servicio técnico</a></li>
-           <li><a href="profesionales/cursos-aplicacion-microcemento.html">Cursos de microcemento</a></li>
-           <li> <a href="distribuidores.html">Distribuidores de microcemento</a></li>
-           <li> <a href="profesionales/metodos-de-aplicacion-microcemento.html">Métodos de aplicación</a></li>
-           <li> <a href="calc/index.html">Calculadora de material</a></li>
-           <li> <a href="descargas.html#fichas-tecnicas-topciment">Fichas técnicas</a></li>
+           <li><a href="#profesionales-microcemento">Cursos de aplicación<br>
+               de microcemento</a></li>
+           <li><a href="#metodos-de-aplicacion">Métodos de aplicación</a></li>
+           <li><a target="_blank" href="descargas.html#fichas-tecnicas-topciment">Fichas Técnicas</a></li>
+           <li> <a target="_blank" href="distribuidores.html">Distribuidores</a></li>
+           <li> <a target="_blank" href="garantia.html">Garantía
+             </a></li>
+
+           <!--<li><a href="#ventajas">Ventajas del microcemento</a></li>
+            <li><a href="#preguntas-frecuentes-ok">Preguntas frecuentes</a></li> -->
          </ul>
        </div>
      </div>
+
+
    </div>
 
    <!-- MENU ESTADO INICIAL MOVIL-->
@@ -256,26 +265,18 @@
      <div class=" clearfix">
        <div id="content">
          <section id="up">
-           <div class="fullscreen background parallax fotoprofesionales"
-             style="background-image:url('imagenes/profesionales/servicios-profesionales.jpg');" data-img-width="1920"
-             data-img-height="1440" data-diff="100">
+           <div class="fullscreen background parallax" style="background-image:url('imagenes/profesionales.JPG');"
+             data-img-width="1500" data-img-height="930" data-diff="100">
              <div class="content-a">
              </div>
            </div><a id="profesionales-microcemento"
              style="display: block;height: 50px;margin-top: -50px;visibility: hidden;"></a>
-           <style>
-             .fotoprofesionales {
-               background-position: 50% -137.328px !important;
-             }
-           </style>
+
            <div class="contenedorMenuOculto">
              <div class="contenedorMagenDerecha">
-               <a id="que-ofrecemos" style="display: block;height: 50px;margin-top: -50px;visibility: hidden;"></a>
                <h1 class="en2">¿Qué ofrecemos a los profesionales?</h1>
 
-               <!--
-                   
-              -->
+               <!-- -->
 
                <p>En Topciment llevamos casi dos décadas al lado de los profesionales del sector de la construcción.
                  Atentos a sus necesidades, hemos ido evolucionando para ofrecerles productos y servicios de alto valor
@@ -285,8 +286,8 @@
                  Ponemos a su alcance un compendio de servicios con el fin de ayudarles a prosperar en el marco
                  profesional.</p>
                <div class="row">
+
                  <div class="col-md-12">
-                   <a id="servicio" style="display: block;height: 20px;margin-top: -20px;visibility: hidden;"></a>
                    <h2 class="en4 card-header mb-4"> <img src="imagenes/iconos/servicio.png" class="img-fluid "> <a
                        class="" href="contacto.html"> Servicio técnico
                        especializado</a> </h2>
@@ -295,25 +296,17 @@
                      tenga el profesional sobre los productos Topciment o de la aplicación, cuidado y mantenimiento del
                      microcemento.
                    </p>
-                   <p> <i class="fa fa-arrow-circle-right"></i> <a class="links" href="contacto.html" title="test"> <strong>Contactar
-                         con un técnico</strong></a></p>
                  </div>
+
                  <div class="col-md-12">
-                   <a id="cursos" style="display: block;height: 20px;margin-top: -20px;visibility: hidden;"></a>
                    <h2 class="en4 card-header"> <img src="imagenes/iconos/cursos.png" class="img-fluid "> <a class=""
-                       href="profesionales/cursos-aplicacion-microcemento.html">Cursos de microcemento</a>
+                       href="curso-formacion-microcementoB.html">Cursos de microcemento</a>
                    </h2>
                    <p>
                      Con el fin de garantizar el mejor resultado posible en la aplicación de nuestros revestimientos
                      continuos, proporcionamos cursos de formación a profesionales para cada nivel. En los cursos
                      Topciment, los instructores enseñan la aplicación de microcemento, barnices, pinturas metálicas o
                      técnicas y texturas avanzadas, entre otros.
-                   </p>
-                   <p>
-
-                     <p> <i class="fa fa-arrow-circle-right"></i> <a class="links"
-                         href="profesionales/cursos-aplicacion-microcemento.html"> <strong>Ver tipos de
-                           cursos</strong></a></p>
                    </p>
                  </div>
                  <style>
@@ -327,7 +320,6 @@
                    }
                  </style>
                  <div class="col-md-12">
-                   <a id="distribuidores" style="display: block;height: 20px;margin-top: -20px;visibility: hidden;"></a>
                    <h2 class="en4 card-header"> <img src="imagenes/iconos/distribuidor.png" class="img-fluid "> <a
                        class="" href="distribuidores.html">Distribuidores de
                        microcemento</a>
@@ -336,24 +328,17 @@
                      Los productos Topciment se comercializan en más de 58 países gracias a nuestros distribuidores de
                      microcemento. Una red de profesionales en continua expansión y que ofrece numerosas ventajas.
                    </p>
-                   <p> <i class="fa fa-arrow-circle-right"></i> <a class="links" href="distribuidores.html"> <strong>
-                         ¿Quieres ser distribuidor?</strong></a></p>
                  </div>
                  <div class="col-md-12">
-                   <a id="metodos" style="display: block;height: 20px;margin-top: -20px;visibility: hidden;"></a>
                    <h2 class="en4 card-header"> <img src="imagenes/iconos/aplicacion.png" class="img-fluid "> <a
-                       class="" href="profesionales/metodos-de-aplicacion-microcemento.html">Métodos de aplicación
+                       class="" href="metodos-de-aplicacion.html">Métodos de aplicación
                        de microcemento</a>
                    </h2>
                    <p>
                      Recomendaciones, consejos y trucos de la aplicación de microcemento se encuentran en este apartado.
                    </p>
-                   <p> <i class="fa fa-arrow-circle-right"></i> <a class="links"
-                       href="profesionales/metodos-de-aplicacion-microcemento.html"><strong>Conocer métodos de
-                         aplicación</strong></a></p>
                  </div>
                  <div class="col-md-12">
-                   <a id="calculadora" style="display: block;height: 20px;margin-top: -20px;visibility: hidden;"></a>
                    <h2 class="en4 card-header"> <img src="imagenes/iconos/calculadora.png" class="img-fluid "> <a
                        class="" href="calc/index.html">Calculadora material
                        microcemento</a>
@@ -364,36 +349,28 @@
                      paredes y exteriores en función del tipo de superficie, los metros cuadrados de esta y el color de
                      microcemento elegido.
                    </p>
-                   <p> <i class="fa fa-arrow-circle-right"></i> <a class="links" href="calc/index.html">
-                       <strong>Calcular material</strong></a></p>
                  </div>
-                 <div class="col-md-12">
-                   <a id="fichas" style="display: block;height: 20px;margin-top: -20px;visibility: hidden;"></a>
-                   <h2 class="en4 card-header"> <img src="imagenes/iconos/catalogue.png" class="img-fluid "> <a class=""
-                       href="descargas.html#fichas-tecnicas-topciment">Fichas técnicas</a>
-                   </h2>
-                   <p>
-                     Facilitamos las fichas técnicas de todos nuestros productos. Así, los profesionales pueden
-                     decantarse por el sistema de microcemento que mejor encaja con sus necesidades personales.
-                   </p>
-                   <p> <i class="fa fa-arrow-circle-right"></i> <a class="links"
-                       href="descargas.html#fichas-tecnicas-topciment"> <strong>Ver fichas técnicas</strong></a></p>
-                 </div>
+
+
                </div>
 
              </div>
            </div>
 
            <div class="mt-5 fullscreen background parallax"
-             style="background-image:url('imagenes/profesionales/profesionales-microcemento.JPG');"
-             data-img-width="1920" data-img-height="1080" data-diff="100">
+             style="background-image:url('imagenes/topciment-aplicacion-suelos-1.jpg');" data-img-width="1500"
+             data-img-height="930" data-diff="100">
              <div class="content-a">
              </div>
            </div>
        </div>
+
+
+
+
      </div>
    </div>
-   <div></div>
+
    <!-- START Footer -->
    <footer class="footerp">
      <div class="contenedorMenuOculto contenedorF">
